sw+rout
