# docs/swagger.json
@@ -47,103 +47,6 @@
         ],
         "responses": {
           "200": {
-            "description": "Successfully found contacts!",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
-                  "properties": {
-                    "status": {
-                      "type": "integer",
-                      "example": 200
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Successfull find contacts!"
-                    },
-                    "data": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/user"
-                      },
-                      "required": [
-                        "data",
-                        "name",
-                        "email"
-                      ]
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      }
-    },
-    "/user/avatar": {
-      "patch": {
-        "tags": [
-          "User"
-        ],
-        "summary": "Patch list of user",
-        "operationId": "patchUser",
-        "description": "Patch user with this endpoint",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "in": "query",
-            "name": "name",
-            "schema": {
-              "type": "string"
-            },
-            "example": "Joy"
-          },
-          {
-            "in": "query",
-            "name": "email",
-            "schema": {
-              "type": "string",
-              "example": "world@gmail.com"
-            }
-          },
-          {
-            "in": "query",
-            "name": "gender",
-            "schema": {
-              "type": "string",
-              "enum": [
-                "Woman",
-                "Man"
-              ],
-              "example": "Woman"
-            }
-          },
-          {
-            "in": "query",
-            "name": "newpassword",
-            "schema": {
-              "type": "string",
-              "example": 54321
-            }
-          }
-        ],
-        "responses": {
-          "200": {
             "description": "Successfully found user!",
             "content": {
               "application/json": {
@@ -171,9 +74,270 @@
                       "required": [
                         "data",
                         "name",
+                        "email"
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/user/updata": {
+      "patch": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Patch updata list of user",
+        "operationId": "patchUpdata",
+        "description": "Patch updata user with this endpoint",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "description": "User name",
+                    "type": "string",
+                    "example": "Joy"
+                  },
+                  "email": {
+                    "description": "User email",
+                    "type": "string",
+                    "example": "world@gmail.com"
+                  },
+                  "gender": {
+                    "description": "User gender",
+                    "enum": [
+                      "Woman",
+                      "Man"
+                    ],
+                    "example": "Woman"
+                  },
+                  "newpassword": {
+                    "description": "User new password",
+                    "type": "string",
+                    "example": "54321"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully found user!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfull find user!"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/updata"
+                      },
+                      "required": [
+                        "data",
+                        "name",
                         "email",
                         "gende",
                         "password"
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/user/avatar": {
+      "patch": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Patch avatar of user",
+        "operationId": "patchAvatar",
+        "description": "Patch user avatar with this endpoint",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "avatar"
+                ],
+                "properties": {
+                  "avatar": {
+                    "description": "Avatar user",
+                    "type": "string",
+                    "format": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully found user!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfull find user!"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/avatar"
+                      },
+                      "required": [
+                        "data",
+                        "name",
+                        "email",
+                        "gende"
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/user/daily": {
+      "patch": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Patch updata dailyNorm",
+        "operationId": "patchUpdataDaily",
+        "description": "Patch updata dailyNorm with this endpoint",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "dailyNorm"
+                ],
+                "properties": {
+                  "dailyNorm": {
+                    "description": "User dailyNorm",
+                    "type": "string",
+                    "example": "1250 ml"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully found user!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfull find user!"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/dailyNorm"
+                      },
+                      "required": [
+                        "data",
+                        "name",
+                        "email",
+                        "gende",
+                        "dailyNorm"
                       ]
                     }
                   }
@@ -543,7 +707,7 @@
         }
       }
     },
-    "/water/glass/{id}": {
+    "/water/glass/{glassId}": {
       "delete": {
         "tags": [
           "Water"
@@ -559,7 +723,7 @@
         "parameters": [
           {
             "in": "path",
-            "name": "id",
+            "name": "glassId",
             "required": true,
             "schema": {
               "type": "string",
@@ -607,19 +771,11 @@
       "user": {
         "type": "object",
         "required": [
-          "_id",
-          "name",
           "email",
-          "gende",
-          "dailyNorm",
-          "photo"
+          "gender",
+          "dailyNorm"
         ],
         "properties": {
-          "_id": {
-            "description": "User id",
-            "type": "string",
-            "example": "65e4decdd286b30065d54af9"
-          },
           "name": {
             "description": "User name",
             "type": "string",
@@ -630,13 +786,133 @@
             "type": "string",
             "example": "world@gmail.com"
           },
-          "gende": {
+          "gender": {
             "description": "User gender",
             "type": "string",
             "enum": [
               "Woman",
               "Man"
             ]
+          },
+          "dailyNorm": {
+            "description": "User dailyNorm",
+            "type": "string",
+            "example": "1500 ml"
+          },
+          "avatarUrl": {
+            "description": "Link to user avatarUrl",
+            "type": "string",
+            "example": "https://image/upload/image.jpg"
+          }
+        }
+      },
+      "updata": {
+        "type": "object",
+        "required": [
+          "email",
+          "gender",
+          "dailyNorm"
+        ],
+        "properties": {
+          "name": {
+            "description": "User name",
+            "type": "string",
+            "example": "Joy"
+          },
+          "email": {
+            "description": "User email",
+            "type": "string",
+            "example": "world@gmail.com"
+          },
+          "gender": {
+            "description": "User gender",
+            "type": "string",
+            "enum": [
+              "Woman",
+              "Man"
+            ]
+          },
+          "dailyNorm": {
+            "description": "User dailyNorm",
+            "type": "string",
+            "example": "1500 ml"
+          },
+          "photo": {
+            "description": "Link to user photo",
+            "type": "string",
+            "example": "https://image/upload/image.jpg"
+          }
+        }
+      },
+      "avatar": {
+        "type": "object",
+        "required": [
+          "email",
+          "gender",
+          "dailyNorm",
+          "avatarUrl"
+        ],
+        "properties": {
+          "name": {
+            "description": "User name",
+            "type": "string",
+            "example": "Joy"
+          },
+          "email": {
+            "description": "User email",
+            "type": "string",
+            "example": "world@gmail.com"
+          },
+          "gender": {
+            "description": "User gender",
+            "type": "string",
+            "enum": [
+              "Woman",
+              "Man"
+            ]
+          },
+          "dailyNorm": {
+            "description": "User dailyNorm",
+            "type": "string",
+            "example": "1500 ml"
+          },
+          "avatarUrl": {
+            "description": "Link to user avatarUrl",
+            "type": "string",
+            "example": "https://image/upload/image.jpg"
+          }
+        }
+      },
+      "dailyNorm": {
+        "type": "object",
+        "required": [
+          "email",
+          "gender",
+          "dailyNorm"
+        ],
+        "properties": {
+          "name": {
+            "description": "User name",
+            "type": "string",
+            "example": "Joy"
+          },
+          "email": {
+            "description": "User email",
+            "type": "string",
+            "example": "world@gmail.com"
+          },
+          "gender": {
+            "description": "User gender",
+            "type": "string",
+            "enum": [
+              "Woman",
+              "Man"
+            ]
+          },
+          "dailyNorm": {
+            "description": "User dailyNorm",
+            "type": "string",
+            "example": "1500 ml"
           },
           "photo": {
             "description": "Link to user photo",
