# src/routers/user.js
@@ -4,7 +4,7 @@ import * as userController from '../controllers/user.js';
 import ctrlWrapper from "../utils/ctrlWrapper.js";
 import validateBody from "../utils/validateBody.js";
 
-import { userUpdateSchema} from '../validation/user.js';
+import { dailyNormUpdateSchema, userUpdateSchema} from '../validation/user.js';
 import { isValidUserId } from '../middlewares/isValidId.js';
 import { authenticate } from "../middlewares/authenticate.js";
 import { upload } from '../middlewares/upload.js';
@@ -16,10 +16,12 @@ userRouter.use(authenticate);
 
 userRouter.get('/', ctrlWrapper(userController.getUserController));
 
-//  змінюється лише avatar
-userRouter.patch('/avatar', isValidUserId, upload.single('photo'), ctrlWrapper(userController.avatarUpdateController),);
 //  змінюється body user + newpassord
-userRouter.patch('/', validateBody(userUpdateSchema), ctrlWrapper(userController.patchUserController));
+userRouter.patch('/updata', validateBody(userUpdateSchema), ctrlWrapper(userController.patchUserController), );
+//  змінюється лише avatar
+userRouter.patch('/avatar', isValidUserId, upload.single('avatarUrl'), ctrlWrapper(userController.avatarUpdateController),);
 
-// userRouter.delete('/', isValidId, ctrlWrapper(userController.deleteUserController));
+userRouter.patch('/daily', validateBody(dailyNormUpdateSchema), ctrlWrapper(userController.patchdailyNormController), );
+
+
 export default userRouter;
